environment/k8s-manifest-repo/base/HAT-backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hat-spring-backend
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hat-spring-backend
  template:
    metadata:
      labels:
        app: hat-spring-backend
    spec:
      containers:
        - name: hat-spring-backend
          image: ACCOUNT_ID.dkr.ecr.AWS_REGION.amazonaws.com/how_about_there/server
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
